# swagger.yaml
@@ -392,6 +392,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -418,6 +429,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -444,6 +466,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -470,6 +503,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -496,6 +540,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -522,6 +577,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -548,6 +614,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -574,6 +651,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -600,6 +688,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -808,6 +907,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -834,6 +944,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -860,6 +981,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -938,6 +1070,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -964,6 +1107,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
@@ -990,6 +1144,17 @@ paths:
         - application/json
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            type: object
+            properties:
+              PerformedBy:
+                type: string
+                description: ID of the person performing the action (defaults to '2' if not provided)
+                example: "5"
       responses:
         200:
           description: Activity inserted successfully
